--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,10 +10,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "animate.css": "^4.1.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuetify": "^3.6.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
