--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,12 +10,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@achrinza/node-ipc": "^10.1.11",
     "@mdi/font": "^7.4.47",
+    "@vue/component-compiler-utils": "^3.3.0",
     "animate.css": "^4.1.1",
     "axios": "^1.7.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-loader": "^17.4.2",
     "vue-router": "^4.0.3",
+    "vue-toastification": "^2.0.0-beta.9",
     "vuetify": "^3.6.6"
   },
   "devDependencies": {
@@ -26,13 +30,13 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-unit-jest": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
     "@vue/eslint-config-standard": "^6.1.0",
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
     "autoprefixer": "^10.4.19",
     "babel-jest": "^27.0.6",
-    "cypress": "^9.7.0",
+    "cypress": "^13.13.0",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
